tests/NormalTests/paczka1/small_fuzzy/67122839.err
Error in line 7: 7S7sk S850 -1,9
Error in line 1: imkqJ S850 43,9
